# convergio-db

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json  tarpaulin-report.json
.github/workflows/: ci.yml
crates/convergio-db/: Cargo.toml
crates/convergio-db/src/: helpers.rs  lib.rs  migration.rs  pool.rs  routes.rs
docs/adr/: 001-extraction.md  ADR-003-sqlite-wal-over-postgres.md  ADR-034-idempotent-migrations.md
