[workspace]
resolver = "2"
members = ["crates/convergio-db"]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/Roberdan/convergio-db"

[workspace.dependencies]
# SDK dependencies
convergio-types = "0.1"

# Common deps — pin same versions as SDK for compatibility
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
tracing = "0.1"
axum = { version = "0.7" }
